<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/beer_taps"
            android:icon="@drawable/ic_untappd"
            android:title="@string/title_beer_taps" />
        <item
            android:id="@+id/catalog"
            android:icon="@drawable/ic_catalog"
            android:title="@string/title_catalog" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_event"
            android:title="@string/title_events" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/title_about" />
    </group>


</menu>
