<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:text="@string/granted_access"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:background="@color/transparent"
        android:text="@string/exit" />

    <Button
        android:id="@+id/bt_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="24dp"
        android:background="@color/transparent"
        android:drawableRight="@drawable/ic_arrow_right"
        android:text="@string/settings" />

</RelativeLayout>